# halt

./: .travis.yml  CMakeLists.txt  README.md  writeData.py
.travis/: install_amd_sdk.sh
cmake/: FindFFTW.cmake  FindOpenCL.cmake  FindclFFT.cmake
fftTiffImg/: main.cpp  main.cu
include/libLiFFT/: AutoDetect.hpp  Composite.hpp  FFT.hpp  FFT_DataWrapper.hpp  FFT_Definition.hpp  FFT_InplaceOutput.hpp  FFT_Kind.hpp  FFT_LibPtrWrapper.hpp  FFT_Memory.hpp  FFT_Properties.hpp  c++14_types.hpp  generateData.hpp  ignore_unused.hpp  libLiFFT.hpp  util.hpp  void_t.hpp
include/libLiFFT/accessors/: ArrayAccessor.hpp  ConvertAccessor.hpp  DataContainerAccessor.hpp  ImageAccessor.hpp  StreamAccessor.hpp  TransformAccessor.hpp  TransposeAccessor.hpp  VolumeAccessor.hpp  ZipAccessor.hpp
include/libLiFFT/libraries/clFFT/: Plan.hpp  clFFT.hpp  clfft_helper.hpp
include/libLiFFT/libraries/clFFT/policies/: #GetInplaceMemSize.hpp#  #Planner.hpp#  .#Planner.hpp  Context.hpp  ExecutePlan.hpp  GetInplaceMemSize.hpp  OpenCLAllocator.hpp  OpenCLMemCpy.hpp  Planner.hpp
include/libLiFFT/libraries/clFFT/traits/: FFTType.hpp  Sign.hpp  Types.hpp
include/libLiFFT/libraries/cuFFT/: Plan.hpp  cuFFT.hpp  cufft_helper.hpp
include/libLiFFT/libraries/cuFFT/policies/: CudaAllocator.hpp  CudaMemCpy.hpp  ExecutePlan.hpp  GetInplaceMemSize.hpp  Planner.hpp
include/libLiFFT/libraries/cuFFT/traits/: FFTType.hpp  LibTypes.hpp  Sign.hpp  Types.hpp
include/libLiFFT/libraries/fftw/: FFTW.hpp  fftw3Include.h
include/libLiFFT/libraries/fftw/policies/: CreatePlan.hpp  ExecutePlan.hpp  FreePlan.hpp  Planner.hpp
include/libLiFFT/libraries/fftw/traits/: LibTypes.hpp  Sign.hpp
include/libLiFFT/mem/: AoSValues.hpp  ComplexAoSValues.hpp  ComplexSoAValues.hpp  DataContainer.hpp  FileContainer.hpp  PlainPtrWrapper.hpp  RealValues.hpp
include/libLiFFT/policies/: CalcIntensity.hpp  CalcIntensityFunctor.hpp  Copy.hpp  GetExtents.hpp  GetExtentsRawPtr.hpp  GetNumElements.hpp  GetStrides.hpp  IntensityCalculator.hpp  Loop.hpp  SafePtrCast.hpp  flattenIdx.hpp
include/libLiFFT/testLib/: IntensityLibrary.hpp
include/libLiFFT/traits/: AccessorTraits.hpp  GetMemSize.hpp  IdentityAccessor.hpp  IntegralType.hpp  IsAoS.hpp  IsBinaryCompatible.hpp  IsComplex.hpp  IsDeviceMemory.hpp  IsInplace.hpp  IsStrided.hpp  NumDims.hpp  RemoveModifiers.hpp
include/libLiFFT/types/: AddDimsWrapper.hpp  Complex.hpp  LibPtr.hpp  Range.hpp  Real.hpp  SliceView.hpp  SymmetricWrapper.hpp  TypePair.hpp  Vec.hpp  View.hpp
include/tiffWriter/: AllocatorWrapper.hpp  FormatTraits.hpp  ImageFormat.hpp  converters.hpp  exceptions.hpp  image.hpp  image.tpp  tiffWriter.hpp  traitsAndPolicies.hpp  uvector.hpp
reportVolumes/: main.cpp
test/: CMakeLists.txt  IntensityCalculator_Test.hpp  Makefile  Volume.hpp  VolumeAdapter.hpp  main.cpp  main.cu  minIncludes.cpp  policyExample.hpp  policyTest.hpp  testCustomTypes.cpp  testCustomTypes.cu  testDefines.hpp  testFile.cpp  testFile.cu  testInplace.cpp  testInplace.cu  testOpenCL.cpp  testPlainPtr.cpp  testPlainPtr.cu  testUtils.cpp  testUtils.cu  testUtils.hpp  testWrappers.cpp  testWrappers.cu  testZip.cpp  testZip.cu
tiff2Pdf/: tiff2pdf.cpp
